# ClassFocusRecog

./: .gitignore  CMakeLists.txt  Makefile  README.md  demo.cpp  ssi.c
.cache/clangd/index/: demo.cpp.8541382907213241.idx
backup/: CMakeLists.txt  ssi.c
backup/src/: ssi.h
bin.backup/: SSI  SVM_DATA.xml  cfr
chatGPT_demo/: emotion_classification.cpp
chatGPT_demo/获取svm表情模型/: README.md
include/: ssi.h
lib/: opencv3.4_build.sh
src/: cfr_expression_recognition.h  cfr_image_converter.h  cfr_widget.cpp  cfr_widget.h  cfr_window.h  main.cpp  ssi_expression_recognition.cpp  ssi_expression_recognition.h  ssi_face_recognition.cpp  ssi_face_recognition.h  ssi_image_converter.cpp  ssi_image_converter.h  ssi_img_idf.cpp  ssi_img_idf.h  ssi_module_trainer.cpp  ssi_module_trainer.h  ssi_widget.cpp  ssi_widget.h  ssi_window.cpp  ssi_window.h
src/cfr_mgr_cli/: CMakeLists.txt
src/cfr_mgr_cli/src/: cfr_image_converter.cpp  cfr_module_trainer.h
src/cfr_serv/: CMakeLists.txt
src/cfr_serv/src/: cfr_face_recognition.h  main.cpp
src/cfr_user_cli/: CMakeLists.txt
src/cfr_user_cli/src/: cfr_expression_recognition.cpp  cfr_face_recognition.cpp  cfr_window.cpp
src/demo/: CMakeLists.txt
src/demo/src/: main.cpp  ocsfs_expression_recognition.cpp  ocsfs_face_recognition.cpp  ocsfs_face_recognition.h  ocsfs_module_trainer.cpp  ocsfs_widget.cpp  ocsfs_widget.h  ocsfs_window.cpp
src/include/: ocsfs_define.h
src/module_train_tool/: CMakeLists.txt
src/module_train_tool/src/: cfr_face_recognition.cpp  cfr_module_trainer.cpp  main.cpp  ocsfs_expression_recognition.cpp  ocsfs_expression_recognition.h  ocsfs_face_recognition.cpp  ocsfs_module_trainer.cpp  ocsfs_module_trainer.h
src/ocsfs_mgr_cli/: CMakeLists.txt
src/ocsfs_mgr_cli/src/: ocsfs_barchar_label.cpp  ocsfs_barchar_label.h  ocsfs_client.cpp  ocsfs_client.h  ocsfs_connect_widget.cpp  ocsfs_expression_recognition.cpp  ocsfs_expression_recognition.h  ocsfs_float_widget.cpp  ocsfs_float_widget.h  ocsfs_image_converter.h  ocsfs_info_dialog.cpp  ocsfs_info_dialog.h  ocsfs_interactive_dialog.cpp  ocsfs_interactive_dialog.h  ocsfs_login_widget.cpp  ocsfs_login_widget.h  ocsfs_module_trainer.cpp  ocsfs_module_trainer.h  ocsfs_pic_show_dialog.cpp  ocsfs_pic_show_dialog.h  ocsfs_processthree_widget.cpp  ocsfs_processthree_widget.h  ocsfs_student_info_dialog.cpp  ocsfs_student_info_dialog.h  ocsfs_widget.cpp  ocsfs_widget.h  ocsfs_window.cpp  ocsfs_window.h
src/ocsfs_serv/: CMakeLists.txt
src/ocsfs_serv/src/: main.cpp  ocsfs_client_handler.cpp  ocsfs_client_handler.h  ocsfs_expression_recognition.cpp  ocsfs_expression_recognition.h  ocsfs_face_recognition.cpp  ocsfs_profileface_recognition.cpp  ocsfs_profileface_recognition.h  ocsfs_server.cpp  ocsfs_server.h  ocsfs_widget.cpp  ocsfs_widget.h
src/ocsfs_user_cli/: CMakeLists.txt
src/ocsfs_user_cli/src/: ocsfs_client.cpp  ocsfs_client.h  ocsfs_connect_widget.cpp  ocsfs_connect_widget.h  ocsfs_expression_recognition.h  ocsfs_face_recognition.cpp  ocsfs_image_converter.cpp  ocsfs_login_widget.cpp  ocsfs_login_widget.h  ocsfs_widget.cpp  ocsfs_widget.h  ocsfs_window.cpp  ocsfs_window.h
